--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
 
     implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
     implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828' // Picasso Image Loading/Caching
+
 }
