Implemented the wiki infobox parser into the StatsFragment page for now. This code simply grabs linus torvalds infobox and displays it. Image not working but that's a webview error

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828' // Picasso Image Loading/Caching
 
+    implementation 'org.jsoup:jsoup:1.11.1'
+
 }
