Room database & general data-layer skeleton

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,7 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-
+#this allows use of support library as well as androidx.*
+# see https://stackoverflow.com/questions/52033810/can-i-use-library-that-used-android-support-with-androidx-projects
+android.useAndroidX=true
+android.enableJetifier=true
