--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 
-apply plugin: 'androidx.navigation.safeargs' // for Navigation Component
+// apply plugin: 'androidx.navigation.safeargs' // for Navigation Component
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -20,19 +20,43 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    def nav_version = "2.1.0-alpha06"
+    def room_version = "2.1.0-alpha04"
+    def lifecycle_version = "2.0.0"
 
-    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+
+    implementation "com.android.support:support-core-utils:28.0.0"
+    implementation "com.android.support:support-fragment:28.0.0"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
+
+    // implementation 'com.android.support:appcompat-v7:28.0.0'
+    // implementation 'com.android.support:support-v4:28.0.0'
+    // testImplementation 'junit:junit:4.12'
 
     implementation 'com.squareup.picasso:picasso:2.71828' // Picasso Image Loading/Caching
 
     implementation 'org.jsoup:jsoup:1.11.1'
+
+    // Navigation Components (Java)
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    // Room Components (Java)
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    androidTestImplementation "androidx.room:room-testing:$room_version"
+
+    // Lifecycle components (Java)
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+    androidTestImplementation ('androidx.test.espresso:espresso-core:3.1.0', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 
 }
