--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-
 // apply plugin: 'androidx.navigation.safeargs' // for Navigation Component
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -59,4 +59,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+}
+repositories {
+    mavenCentral()
 }
